...
            verticalArrangement = Arrangement.Center
        ) {

            Spacer(modifier = Modifier.height(24.dp))

            MainFormTextField(
                modifier = Modifier.testTag("reg_firstname"),
                value = firstName,
                onValueChange = { firstName = it },
                label = stringResource(R.string.first_name),
                enabled = !registrationState.isLoading
            )

            Spacer(modifier = Modifier.height(8.dp))

            MainFormTextField(
                modifier = Modifier.testTag("reg_lastname"),
                value = lastName,
                onValueChange = { lastName = it },
                label = stringResource(R.string.last_name),
                enabled = !registrationState.isLoading
            )

...
                            lastName = lastName,
                            phoneNumber = if (phoneNumber.isNotBlank()) "${selectedCountry.dialCode}$phoneNumber" else null,
                            birthDate = birthDate
                        )
                    },
                    enabled = firstName.isNotBlank() && lastName.isNotBlank(),
                    modifier = Modifier.fillMaxWidth().testTag("reg_create_btn"),
                )

                Spacer(modifier = Modifier.height(8.dp))

                OrDivider()

...
